<resources>
    <string name="app_name">AppTeste</string>
    <string name="imageApresentacao">Mulher com roupa de academia</string>
    <string name="btn_login">Vamos começar</string>
    <string name="btn_cadastrar">Cadastre-se</string>
    <string name="name_app">GymApp</string>
    <string name="login">Login</string>
    <string name="text_conecte">Ou conecte-se com</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="entrar">Entrar</string>
    <string name="novo_por_aqui">É novo por aqui?</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="de_volta_por_aqui">De volta por aqui?</string>
    <string name="continuar">Continue</string>
    <string name="criar_treino">Criar Treino</string>
    <string name="data">Selecione a data</string>
    <string name="descricao">Descrição</string>
    <string name="criar_exercicio">Criar Exercício</string>
    <string name="cadastrar_exerc_cio">cadastrar exercício</string>
    <string name="carregar_imagem">Carregar imagem</string>
    <string name="escolher_exercicios">Escolher Exercícios</string>
    <string name="exercicios">exercicios</string>
    <string name="salvar">Salvar</string>
    <string name="deslogar">Deslogar</string>
    <string name="teste">teste</string>
    <string name="horario">Horario</string>
    <string name="cadastrar_treino">Cadastrar treino</string>
    <string name="continue_with">Ou continue com</string>
    <string name="bem_vindo">Seja bem-vindo novamente</string>
    <string name="cadastro">Cadastro</string>
    <string name="bem_vindo_cadastro">Vamos gerenciar seus treinos?</string>
    <string name="home">Home</string>
    <string name="perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pagina_inicial">Página Inicial</string>
    <string name="treinos">Treinos</string>
</resources>