<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/criar_treino"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/edit_nome"
        style="@style/editText"
        android:hint="@string/nome"
        android:inputType="text"
        android:autofillHints="no"/>
    <EditText
        android:id="@+id/edit_data"
        style="@style/editText"
        android:hint="@string/data"
        android:inputType="date"
        android:autofillHints="no"/>
    <EditText
        android:id="@+id/edit_descricao"
        style="@style/editText"
        android:hint="@string/descricao"
        android:inputType="text"
        android:autofillHints="no"/>
    <Button
        android:id="@+id/btn_treino_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/btn_confirm"
        android:text="@string/continuar"
        android:textColor="@color/white"
        app:cornerRadius="5dp" />





</LinearLayout>
