<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/cadastrar"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/edit_nome"
        style="@style/editText"
        android:inputType="text"
        android:hint="@string/nome"
        android:autofillHints="no"/>

    <EditText
        android:id="@+id/edit_email"
        style="@style/editText"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/senha"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/edit_senha"
            style="@style/editText"
            android:maxLines="1"
            android:hint="@string/senha"
            android:importantForAutofill="no"
            android:inputType="textPassword" />



    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_CadastroSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/btn_confirm"
        android:text="@string/continuar"
        android:textColor="@color/white"
        app:cornerRadius="5dp" />










    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/de_volta_por_aqui"
            android:layout_marginEnd="3dp"/>

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/btn_confirm"/>
    </LinearLayout>


</LinearLayout>