<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/login"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/edit_email"
        style="@style/editText"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/senha"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/edit_senha"
            style="@style/editText"
            android:maxLines="1"
            android:hint="@string/senha"
            android:importantForAutofill="no"
            android:inputType="textPassword" />



    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_loginSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/btn_confirm"
        android:text="@string/entrar"
        android:textColor="@color/white"
        app:cornerRadius="5dp" />




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/novo_por_aqui" />

        <TextView
            android:id="@+id/text_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cadastrar"
            android:textColor="@color/btn_confirm" />
    </LinearLayout>


</LinearLayout>