<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/criar_exercicio"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/edit_nome"
        style="@style/editText"
        android:hint="@string/nome"
        android:inputType="text"
        android:autofillHints="no"/>
    <EditText
        android:id="@+id/edit_descricao"
        style="@style/editText"
        android:hint="@string/descricao"
        android:inputType="text"
        android:autofillHints="no"/>


    <ImageView
        android:id="@+id/image_exercicio"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="TODO" />
    <Button
        android:id="@+id/btn_load_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/btn_confirm"
        android:text="@string/carregar_imagem"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_Exercicio_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/btn_confirm"
        android:text="@string/continuar"
        android:textColor="@color/white"
        app:cornerRadius="5dp" />





</LinearLayout>
