<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_cd_exercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_exerc_cio"
         />
    <Button
        android:id="@+id/btn_cd_treino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_exerc_cio"
         />
    <Button
        android:id="@+id/btn_deslogar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deslogar"
        />
    <Button
        android:id="@+id/btn_teste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teste"
        />


</LinearLayout>