<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CriarTreinoFragment"
    android:background="@color/white"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
         android:layout_width="match_parent"
        android:background="@null"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_gravity="start"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:text="@string/criar_treino"
            android:textSize="40sp" />
        <EditText
            android:id="@+id/edit_nome"
            style="@style/editText"
            android:hint="@string/nome"
            android:inputType="text"
            android:autofillHints="no"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <EditText
            android:id="@+id/edit_data"
            style="@style/editText"
            android:hint="@string/data"
            android:inputType="none"
            android:focusable="false"
            android:autofillHints="no"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
        <EditText
            android:id="@+id/edit_descricao"
            style="@style/editText"
            android:hint="@string/descricao"
            android:inputType="text"
            android:autofillHints="no"/>
        <Button
            android:id="@+id/btn_treino_Submit"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/btn_confirm"
            android:text="@string/continuar"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:cornerRadius="5dp" />





    </LinearLayout>
</FrameLayout>