<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imageApresentacao"
        android:scaleType="centerCrop"
        android:src="@drawable/background_tela_apresentacao" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/name_app"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <LinearLayout
        android:id="@+id/cardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"


        >

        <Button
            android:id="@+id/btn_login"
            style="@style/btn_apresentacao"
            android:backgroundTint="@color/charcoal"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            app:cornerRadius="5dp" />

        <Button

            android:id="@+id/btn_cadastrar"
            style="@style/btn_apresentacao"
            android:backgroundTint="@color/azulRusso"
            android:text="@string/btn_cadastrar"
            app:cornerRadius="5dp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="391dp" />


</androidx.constraintlayout.widget.ConstraintLayout>