<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PerfilFragment"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@null"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/perfil"
            android:textSize="50sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="@string/nome"
            android:layout_gravity="start" />

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/red"
            android:text="@string/deslogar"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:cornerRadius = "10dp"/>

    </LinearLayout>

</FrameLayout>