<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_exercicio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroud_exercicio_item">

    <androidx.cardview.widget.CardView
        android:id="@+id/container_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cardCornerRadius="15dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/image_exercicio"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/exercicios"
            />

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/text_nome"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        app:layout_constraintLeft_toRightOf="@id/container_img"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/text_descricao"
        android:text="@string/descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_nome"
        app:layout_constraintLeft_toRightOf="@id/container_img"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>